--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 # languageexperiment
 
-FIXME: write description
+FIXME: Este es un ejercicio para el Language Experiment I. Consiste en una red social para desarrolladores
 
 ## Usage
 
 FIXME: write
 
-## License
 
-Copyright (C) 2011 FIXME
+
+
 
 Distributed under the Eclipse Public License, the same as Clojure.
